2009-12-08  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_printFile): If cupsPrintFile2()
	fails it returns zero, not -1 (trac #9).

2009-09-03  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getDevices): Added optional timeout
	parameter.

2009-08-18  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c: Define some IPP attribute tag constants.

	* cupsipp.c (IPPRequest_getAttributes): Handle IPP_TAG_ZERO
	attributes which have no attribute name.

2009-08-17  Tim Waugh  <twaugh@redhat.com>

	* cupsipp.c: New file implementing IPPRequest and IPPAttribute
	types.
	* setup.py: Include it as part of the module.
	* Makefile: Add to SOURCES.
	* cupsmodule.c: Define IPP constants.

2009-08-10  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c: Fixed missing newline in documentation for
	getPPDs.

2009-07-07  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_moveJob): New method.

2009-06-19  Tim Waugh  <twaugh@redhat.com>

	* examples/cupstree.py (getippqueue): IPP printers won't support
	CUPS-Get-Printers so don't try recursing.
	(getqueue): Slightly prettier display.

2009-06-18  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.46.

2009-06-18  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c (do_model_compare): Handle wide characters.
	(cups_modelSort): Coersce arguments to Unicode and convert them to
	wide character strings (trac #8).

2009-06-18  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getDevices): Removed unused
	variable.

2009-04-14  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c (cups_ppdSetConformance): New method (trac #3).

2009-03-20  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getDevices): New optional arguments
	limit, exclude_schemes and include_schemes.

2009-03-18  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPPDs): New optional arguments
	limit, exclude_schemes, include_schemes, ppd_device_id, ppd_make,