@@ -3,6 +3,7 @@ NEWS
 
 New in 1.9.47:
 
+* cups.Connection.setPasswordCB() method.
 * cups.Connection.moveJob() method.
 * cups.IPPAttribute and cups.IPPRequest types.
 * IPP state constants.
